<resources>
    <string name="app_name">DonorGo</string>
    <string name="unser_construction">feature is under construction</string>
    <string name="welcome_starter">Welcome to our Blood \n Donation App!</string>
    <string name="saving_life_text">Start saving lives by \n becoming a blood donor.</string>
    <string name="get_started">GET STARTED</string>
    <string name="enter_the_otp">Enter the OTP we have send to your email</string>
    <string name="verifikasi">Verification</string>
    <string name="sign_in">Sign In</string>
    <string name="we_have_already_met">We have already met!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="masuk_dengan">Sign In With</string>
    <string name="don_t_have_an_account">Don’t have account?</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_create_an_account">Let’s create you an account</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="email_label">Email</string>
    <string name="email_empty">Please enter your email</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="username_label">Your Name</string>
    <string name="username_empty">Please enter your name</string>
    <string name="password_label">Password</string>
    <string name="pass_empty">Please enter your password</string>
    <string name="input_under_min_length">Password must be 8 or more characters</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="cpassword_label">Confirm Password</string>
    <string name="cpassword_required">Confirm password is required!!!</string>
    <string name="cpassword_not_match">Confirm Password not match</string>
    <string name="label_telp">Phone Number</string>
    <string name="telp_empty">Please enter your phone</string>
    <string name="phone_must_be">Phone number must be more than 9 digits</string>
    <string name="error_test">Couldn\'t find your Google Account</string>
    <string name="default_required">Required*</string>
    <string name="input_beyond_max_length">Your input is over the limit</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="enter_otp_code">Enter your OTP verification code</string>
    <string name="invalid_otp">Code OTP is invalid</string>
    <string name="empty_otp">Please enter your code OTP</string>
    <string name="expired_otp">Your OTP code is expired</string>
    <string name="must_be_otp">OTP code must be 6 digits</string>
    <string name="timer_start" translatable="false">00:00</string>
    <string name="history_request">History Request</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact US</string>
    <string name="logout">Logout</string>
    <string name="last_donor">Last Donor :</string>
    <string name="setting">Setting</string>
    <string name="home_btn">Home</string>
    <string name="event_btn" translatable="false">Event</string>
    <string name="news_btn">News</string>
    <string name="profile_btn">Profile</string>
    <string name="error_message_tag" translatable="false">onFailure:</string>
    <string name="unauthorized_email">Email not registered!</string>
    <string name="unauthorized_pass">Invalid password!</string>
    <string name="email_not_verified">Email not verified! Please verify your account</string>
    <string name="email_already_exists">Email already exists! If this is your account, please login</string>
    <string name="email_already_exists_error">Email already exists!</string>
    <string name="fab_blood_navigation_bar" translatable="false">View List Blood Request in Maps</string>
    <string name="event_banner_home" translatable="false">Image Banner for Event</string>
    <string name="button_home_navigation" translatable="false">Button Home Navigation</string>
    <string name="button_event_navigation" translatable="false">Button Event Navigation</string>
    <string name="button_news_navigation" translatable="false">Button News Navigation</string>
    <string name="button_profile_navigation" translatable="false">Button Profile Navigation</string>
    <string name="button_notif" translatable="false">Button Notification</string>
    <string name="back_button" translatable="false">Button Back to Home</string>
    <string name="logout_confirm">Are you sure to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stock_nav">Stock</string>
    <string name="table_nav">Table</string>
    <string name="donate_nav">Donate</string>
    <string name="request_nav">Request</string>
    <string name="faq_nav">FAQ</string>
    <string name="blood_request_title">Blood Request</string>
    <string name="more_blood"><![CDATA[More >>]]></string>
    <string name="event_title" translatable="false">Event</string>
    <string name="more_event"><![CDATA[More >>]]></string>
    <string name="news_title" translatable="false">News</string>
    <string name="more_news"><![CDATA[More >>]]></string>
    <string name="image_cloud" translatable="false">Image Cloud Background</string>
    <string name="title_event">Celebrating the 352nd Anniversary of the City of Padang, the Department of Commerce Holds a Blood Donation</string>
    <string name="content_image_for_event" translatable="false">Content Image For Event</string>
    <string name="faq_desc">Rhesus Negative is a rare blood. Rhesus negative blood voters are only 15% in the world and Indonesia only has 1% of them</string>
    <string name="faq_title">What is the importance of knowing your blood Rhesus?</string>
    <string name="help_and_save_others">Help and Save Others</string>
    <string name="your_blood_means_a_lot">Your blood means a lot and can save the lives of others</string>
    <string name="help_people">Help People in Need of Blood</string>
    <string name="news_title_list">BPKP Riau Together with UTD PMI Pekanbaru City Holds Social Service to Improve Community Welfare…</string>
    <string name="posted_list_news_item">Posted at: %1$s</string>
    <string name="on_going">On Going</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="waiting">Waiting</string>
    <string name="select_text">browse and select your image to upload file</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="title_uploud">Upload Your Image</string>
    <string name="btn_uploud" translatable="false">UPLOAD</string>
    <string name="btn_gallery" translatable="false">GALLERY</string>
    <string name="btn_camera" translatable="false">CAMERA</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="empty_image_select">Please select an image first\…</string>
    <string name="compress_and_uploud">Waiting for the compression process and image upload</string>
    <string name="user_not_found">User not found!</string>
    <string name="invalid_ktp">Make sure the KTP that you upload is clear and correct!</string>
    <string name="timeout_ktp">Make sure the image is an ID card or try again later</string>
    <string name="timeout">Sorry, your request could not be completed within the specified time limit. Please try again later or contact the technical support team for further assistance.</string>
    <string name="internal_server_err">I apologize for this inconvenience. Our server encountered an internal error that stopped processing your request. We\'re working to fix it.</string>
    <string name="uploud_photo_succes">Profile photo updated successfully</string>
    <string name="edit_foto_profile">Change</string>
    <string name="verified_user" translatable="false">Verified User</string>
    <string name="unverified_user" translatable="false">Unverified User</string>
    <string name="scan_ktp" translatable="false">SCAN KTP</string>
    <string name="desc">Diligently donating blood can reduce the risk of heart attack by up to 88 percent. Not only that, donating blood can also minimize the risk of cancer, stroke, and heart attack. Interestingly, the benefits of blood donation can also stabilize iron levels in the blood.\n\n\"The blood you donate gives someone another chance to live. One day, that someone may be a close relative, friend, loved one or even you. .\" - redcrossblood.org\n\nYou can be a hero just by donating blood! You can give blood voluntarily through blood transfusions for those in need.</string>
    <string name="taukah_kamu">Do you know?</string>
    <string name="can_donate">Can Donate:</string>
    <string name="regency_city">Regency/City</string>
    <string name="hospital">Hospital</string>
    <string name="donor" translatable="false">DONOR</string>
    <string name="pasient_name" translatable="false">Roronoa Zoro bin Azzuhai</string>
    <string name="banyak_yang_dibutuhkan">Much needed:</string>
    <string name="_3" translatable="false">3</string>
    <string name="location">Location</string>
    <string name="rsud_mandau" translatable="false">RSUD Mandau</string>
    <string name="address">Address</string>
    <string name="jl_stadion_no_10_duri_bengkalis" translatable="false">Jl. Stadion No 10, Duri, Bengkalis</string>
    <string name="description">Description</string>
    <string name="example_request_description">Need help sir/madam. need blood for a friend\'s wife who dropped after a miscarriage.</string>
    <string name="close_family">Close Family</string>
    <string name="nelly_agustin" translatable="false">Nelly Agustin</string>
    <string name="number_phone" translatable="false">(%1$s)</string>
    <string name="tittle_form_req">Form Request Donor</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="number_of_blood_bags">Number of blood bags</string>
    <string name="family_contact">Family Contact</string>
    <string name="family_name">Family Name</string>
    <string name="positif">Positive</string>
    <string name="negatif">Negative</string>
    <string name="unknown">Unknown</string>
    <string name="province">Province</string>
    <string name="regency_or_city">Regency or City</string>
    <string name="discription">Description</string>
    <string name="title_blood_table">Blood Compatibility</string>
    <string name="content_desc1_table">Anyone who qualifies can donate blood, but depending on your blood type, you can only receive certain types of blood, plasma, or platelets. Do you know your blood type? It is important to know because blood types can be compatible or not compatible with each other.</string>
    <string name="content_desc2_table">There are eight different blood types, and they don\'t always match each other. Interestingly, people who have O-negative blood are considered universal donors for the entire population because they can donate blood to all types of blood groups.\n\nThere are four main blood types: A, B, AB and O. The combination of protein and sugar, which is called antigens, on the surface of red blood cells, are what make that blood type compatible or incompatible with other blood groups.\n\n• For example, if you are blood type A, you can only receive blood type A or blood type O. You cannot receive blood type B or blood group AB.\n• If you have blood type B, you can only receive blood type B or blood type O. You cannot receive blood type A or blood type AB.\n• If you have blood type AB blood, you can receive all blood groups.\n• If you have blood type O, you can only receive blood type O.</string>
    <string name="understand">Understand</string>
    <string name="request_sent">Request sent</string>
    <string name="content_pop_up">Your data will be automatically updated once the process is done</string>
    <string name="btn_ok" translatable="false">OK</string>
</resources>