<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="370dp"
        style="@style/cardViewStyle"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_message"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/checklist"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/HeaderTextBold"
                android:text="@string/request_sent"
                android:gravity="center"
                android:textColor="@color/pingky" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleText"
                android:gravity="center"
                android:text="@string/content_pop_up"
                android:layout_margin="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_ok"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/pingky"
                android:text="@string/btn_ok"
                android:textColor="@color/white"
                android:textSize="26sp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>