<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.event.EventActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-110dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_event_list_vertikal"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/background_app"
            android:paddingStart="@dimen/margin_start_toolbar"
            android:paddingEnd="@dimen/margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_back"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="3dp"
                android:backgroundTint="@color/white"
                android:drawableTop="@drawable/bt_back_arrow"
                android:paddingTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbarTitle"
                android:text="@string/event_title"
                style="@style/extra_bold_black"
                android:textSize="20sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- BLOOD BUTTON -->
    <LinearLayout
        android:id="@+id/list_request_maps_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blood_button"
        android:layout_gravity="center"
        android:elevation="11dp"
        android:layout_marginBottom="-90dp"
        android:orientation="horizontal" />

    <!--  NAVIGATION  -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="-123dp"
        android:elevation="10dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            android:paddingTop="6dp"
            android:paddingBottom="4dp"
            app:addElevationShadow="true"
            app:fabCradleMargin="15dp"
            app:fabCradleRoundedCornerRadius="70dp"
            app:fabCradleVerticalOffset="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/home_btn"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="-7dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home"
                        android:contentDescription="@string/button_home_navigation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/akrobat_bold"
                        android:text="@string/home_btn"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_btn"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_btn"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/event"
                        android:contentDescription="@string/button_event_navigation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/akrobat_bold"
                        android:text="@string/event_btn"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/news_btn"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profile_btn"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/news"
                        android:contentDescription="@string/button_news_navigation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/akrobat_semibold"
                        android:text="@string/news_btn"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_btn"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profil"
                        android:contentDescription="@string/button_profile_navigation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/akrobat_bold"
                        android:text="@string/profile_btn"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="11sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/fab_blood_navigation_bar"
            android:elevation="3dp"
            app:fabSize="mini"
            app:layout_anchor="@id/app_bar"
            app:maxImageSize="40dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>