<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.edit_profile.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/page_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp"
                android:paddingBottom="20dp"
                android:outlineProvider="bounds"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_page_one"
                android:elevation="13dp">

                <TextView
                    android:id="@+id/title"
                    style="@style/bold_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginHorizontal="28dp"
                    android:text="@string/title_blood_table"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/content_desc"
                    style="@style/regular_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/content_desc1_table" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="20dp"
                android:outlineProvider="bounds"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_middle_page"
                android:elevation="13dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="330dp"
                    android:layout_height="339dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tabel_kecocokan_darah"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="20dp"
                android:outlineProvider="bounds"
                android:paddingBottom="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_page_two"
                android:elevation="13dp">

                <TextView
                    android:id="@+id/content_desc2"
                    style="@style/regular_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:text="@string/content_desc2_table" />

                <Button
                    android:id="@+id/btn_understand"
                    style="@style/bold_white"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="26dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_pick_date"
                    android:text="@string/understand"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>