<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/started_page"
        android:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_starter"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <ImageView
            android:id="@+id/img_nurse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nurse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bottom_starter"
            android:layout_marginBottom="-23dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/wrapper_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="35dp"
            app:layout_constraintTop_toBottomOf="@id/img_nurse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.30">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/akrobat_semibold"
                android:text="@string/welcome_starter"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saving_life_text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="normal"
                android:fontFamily="@font/akrobat_semibold"
                android:textSize="20sp"
                android:textColor="@color/grey"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red"
            android:paddingVertical="10dp"
            android:paddingHorizontal="60dp"
            android:textSize="20sp"
            android:alpha="0"
            android:fontFamily="@font/akrobat_semibold"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrapper_text"
            app:layout_constraintVertical_bias="0.40" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>